Update spellcheck and expand what we check
Check the yaml too

Signed-off-by: Tim Smith <tsmith84@gmail.com>

--- a/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondooauditconfig-crd.yaml
@@ -113,7 +113,7 @@ spec:
                       include:
                         description: Include is the list of resources to watch/scan.
                           Setting Include overrides anything in the Exclude list as
-                          specifying an Include list is effectively excluding everying
+                          specifying an Include list is effectively excluding everything
                           except for what is on the Include list.
                         items:
                           type: string
