--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -304,7 +304,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        fetch-depth: 0 # fetch is nneded for "git tag --list" in the Makefile
+        fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
 
     - name: Download test results
       uses: actions/download-artifact@v3
