--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -283,7 +283,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0 # fetch is nneded for "git tag --list" in the Makefile
+          fetch-depth: 0 # fetch is needed for "git tag --list" in the Makefile
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
 
