--- a/config/manifests/patches/description.yaml
+++ b/config/manifests/patches/description.yaml
@@ -6,13 +6,16 @@
     The Mondoo Operator provides the following features:
 
     - Continuous validation of deployed workloads
-    - Continuous validation of Kubernetes nodes **without** priviledged access
+    - Continuous validation of Kubernetes nodes **without** privileged access
     - Admission Controller 
 
-    It is backed by Mondoo's powerful [Policy-as-Code](https://mondoo.com/docs/getstarted/policy-as-code) engine and [MQL](https://mondoo.com/docs/mql/resources/). Mondoo ships out-of-the-box security policies for:
+    It is backed by Mondoo's powerful Policy-as-Code engine [cnspec](https://mondoo.com/docs/cnspec/cnspec-about/) and [MQL](https://mondoo.com/docs/mql/resources/). Mondoo ships out-of-the-box security policies for:
 
-    - CIS Kubernetes Benchmark
-    - Kubernetes Application Benchmark
+    - CIS Kubernetes Benchmarks
+    - CIS AKS/EKS/GKE/OpenShift Benchmarks 
+    - NSA/CISA Kubernetes Hardening Guide
+    - Kubernetes Cluster and Workload Security
+    - Kubernetes Best Practices
 
     Further information is available at [User manual](https://github.com/mondoohq/mondoo-operator/blob/main/docs/user-manual.md).
 
@@ -20,7 +23,7 @@
 
     2. Configure the Mondoo Secret
 
-    - Create a new Mondoo service account to report assessments to [Mondoo Platform](https://mondoo.com/docs/platform/service_accounts)
+    - Create a new Mondoo service account to report assessments to [Mondoo Platform](https://mondoo.com/docs/platform/console/access/service_accounts/)
     - Store the service account json into a local file `creds.json`
     - Store service account as a secret in the mondoo namespace via:
 
