--- a/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
+++ b/config/manifests/bases/mondoo-operator.clusterserviceversion.yaml
@@ -7,10 +7,9 @@ metadata:
     categories: Security
     certified: "false"
     containerImage: ghcr.io/mondoohq/mondoo-operator:v0.0.11
-    description: Mondoo is a cloud security platform for infrastructure developers.
-      Using Mondoo, your team will get automated risk assessment and real-time insights
-      into all of your business critical infrastructure, across all of your infrastructure
-      platforms.
+    description: Mondoo is an extensible security posture management platform for
+      your entire infrastructure stack. Proactively address threats, prevent breaches
+      and compliance violations.
     repository: https://github.com/mondoohq/mondoo-operator
     support: Mondoo
   name: mondoo-operator.v0.0.0
@@ -346,6 +345,9 @@ spec:
     type: AllNamespaces
   keywords:
   - policy-as-code
+  - CIS
+  - NSA
+  - admission
   links:
   - name: Mondoo
     url: https://mondoo.com
