--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -18,6 +18,8 @@ spec:
       limits:
   kubernetesResources:
     enable: true
+  containers:
+    enable: true
   nodes:
     enable: true
   admission:
