--- a/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig_minimal.yaml
@@ -8,7 +8,8 @@ spec:
     name: mondoo-client
   kubernetesResources:
     enable: true
-    containerImageScanning: true
+  containers:
+    enable: true
   nodes:
     enable: false
   admission:
