--- a/charts/mondoo-operator/templates/manager-config.yaml
+++ b/charts/mondoo-operator/templates/manager-config.yaml
@@ -5,19 +5,5 @@ metadata:
   labels:
   {{- include "mondoo-operator.labels" . | nindent 4 }}
 data:
-  controller_manager_config.yaml: |
-    apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
-    health:
-      healthProbeBindAddress: {{ .Values.managerConfig.controllerManagerConfigYaml.health.healthProbeBindAddress
-        | quote }}
-    kind: ControllerManagerConfig
-    leaderElection:
-      leaderElect: {{ .Values.managerConfig.controllerManagerConfigYaml.leaderElection.leaderElect
-        }}
-      resourceName: {{ .Values.managerConfig.controllerManagerConfigYaml.leaderElection.resourceName
-        | quote }}
-    metrics:
-      bindAddress: {{ .Values.managerConfig.controllerManagerConfigYaml.metrics.bindAddress
-        | quote }}
-    webhook:
-      port: {{ .Values.managerConfig.controllerManagerConfigYaml.webhook.port }}
+  controller_manager_config.yaml: {{ .Values.managerConfig.controllerManagerConfigYaml
+    | toYaml | indent 1 }}
