--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -1,8 +1,21 @@
 controllerManager:
   manager:
+    args:
+    - operator
+    - --health-probe-bind-address=:8081
+    - --metrics-bind-address=:8080
+    - --leader-elect
+    containerSecurityContext:
+      allowPrivilegeEscalation: false
+      capabilities:
+        drop:
+        - ALL
+      privileged: false
+      readOnlyRootFilesystem: true
     image:
       repository: ghcr.io/mondoohq/mondoo-operator
-      tag: v1.14.0
+      tag: v1.14.1
+    imagePullPolicy: IfNotPresent
     resources:
       limits:
         cpu: 200m
@@ -13,16 +26,18 @@ controllerManager:
   replicas: 1
 kubernetesClusterDomain: cluster.local
 managerConfig:
-  controllerManagerConfigYaml:
+  controllerManagerConfigYaml: |-
+    apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
+    kind: ControllerManagerConfig
     health:
       healthProbeBindAddress: :8081
-    leaderElection:
-      leaderElect: true
-      resourceName: 60679458.mondoo.com
     metrics:
       bindAddress: 127.0.0.1:8080
     webhook:
       port: 9443
+    leaderElection:
+      leaderElect: true
+      resourceName: 60679458.mondoo.com
 metricsService:
   ports:
   - name: metrics
