--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -52,7 +52,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: ["1.24", "1.25", "1.26"]
+        k8s-version: ["1.25", "1.26", "1.27"]
 
     steps:
       - uses: actions/checkout@v3
@@ -132,7 +132,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: ["1.23", "1.24", "1.25", "1.26"]
+        k8s-version: ["1.23", "1.24", "1.25", "1.26", "1.27"]
 
     env:
       TF_VAR_test_name: ${{ github.event.inputs.mondooOperatorImageTag }}
@@ -215,7 +215,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: ["1.23", "1.24", "1.25", "1.26"]
+        k8s-version: ["1.24", "1.25", "1.26", "1.27"]
 
     env:
       GOOGLE_APPLICATION_CREDENTIALS: ${{ format('{0}/{1}', github.workspace, 'gcp_sa.json') }}
