--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -166,6 +166,10 @@ spec:
                         type: array
                     type: object
                 type: object
+              httpProxy:
+                description: HttpProxy specifies a proxy to use for HTTP requests
+                  to the Mondoo platform.
+                type: string
               kubernetesResources:
                 properties:
                   containerImageScanning:
