--- a/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
@@ -39,6 +39,10 @@ spec:
           spec:
             description: MondooOperatorConfigSpec defines the desired state of MondooOperatorConfig
             properties:
+              httpProxy:
+                description: HttpProxy specifies a proxy to use for HTTP requests to
+                  the Mondoo platform.
+                type: string
               metrics:
                 description: Metrics controls the enabling/disabling of metrics report
                   of mondoo-operator
