--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -27,6 +27,8 @@ controllerManager:
 kubernetesClusterDomain: cluster.local
 managerConfig:
   controllerManagerConfigYaml: |-
+    # Copyright (c) Mondoo, Inc.
+    # SPDX-License-Identifier: BUSL-1.1
     apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
     kind: ControllerManagerConfig
     health:
