--- a/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
@@ -1,6 +1,3 @@
-# Copyright (c) Mondoo, Inc.
-# SPDX-License-Identifier: BUSL-1.1
-
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
@@ -39,6 +36,10 @@ spec:
           spec:
             description: MondooOperatorConfigSpec defines the desired state of MondooOperatorConfig
             properties:
+              httpProxy:
+                description: HttpProxy specifies a proxy to use for HTTP requests to
+                  the Mondoo platform.
+                type: string
               metrics:
                 description: Metrics controls the enabling/disabling of metrics report
                   of mondoo-operator
