--- a/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
+++ b/charts/mondoo-operator/templates/mondoooperatorconfig-crd.yaml
@@ -38,7 +38,7 @@ spec:
             properties:
               httpProxy:
                 description: HttpProxy specifies a proxy to use for HTTP requests to
-                  Mondoo Platform.
+                  the Mondoo Platform.
                 type: string
               metrics:
                 description: Metrics controls the enabling/disabling of metrics report
