--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -14,7 +14,7 @@ controllerManager:
       readOnlyRootFilesystem: true
     image:
       repository: ghcr.io/mondoohq/mondoo-operator
-      tag: v1.16.0
+      tag: v1.17.0
     imagePullPolicy: IfNotPresent
     resources:
       limits:
@@ -27,6 +27,8 @@ controllerManager:
 kubernetesClusterDomain: cluster.local
 managerConfig:
   controllerManagerConfigYaml: |-
+    # Copyright (c) Mondoo, Inc.
+    # SPDX-License-Identifier: BUSL-1.1
     apiVersion: controller-runtime.sigs.k8s.io/v1alpha1
     kind: ControllerManagerConfig
     health:
