fix org mrn for tests
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 MONDOO_API_TOKEN=xxxx
+MONDOO_ORG_MRN=//captain.api.mondoo.app/organizations/xxx
 MONDOO_GQL_ENDPOINT=https://api.edge.mondoo.com/query
