--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -64,16 +64,6 @@ jobs:
       - name: Print workflow inputs
         run: echo "${{ toJSON(github.event.inputs) }}"
 
-      - name: Store creds (edge)
-        if: ${{ inputs.useEdge == true }}
-        run: |
-          echo ${{ secrets.MONDOO_CLIENT_EDGE }} | base64 -d > creds.json
-
-      - name: Store creds (prod)
-        if: ${{ inputs.useEdge == false }}
-        run: |
-          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
-
       # Now that dependencies are cached the tests start almost immediately after minikube has started
       # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
       # before the test execution starts.
@@ -83,6 +73,7 @@ jobs:
       - name: Run integration tests
         env:
           MONDOO_API_TOKEN: ${{ secrets.MONDOO_TEST_ORG_TOKEN }}
+          MONDOO_ORG_MRN: //captain.api.mondoo.app/organizations/serene-lovelace-854342
           MONDOO_GQL_ENDPOINT: https://api.edge.mondoo.com/query
         run: K8S_DISTRO=${{ matrix.k8s-distro }} make test/integration/ci
 
