--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -328,9 +328,6 @@ jobs:
           kubectl get pods -n mondoo-operator -o yaml >> tests/integration/_output/mondoo-pods.log
           kubectl logs -n olm deployment/olm-operator >> tests/integration/_output/olm-operator-pods.log
 
-      - name: Store creds
-        run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
-
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -340,6 +337,7 @@ jobs:
       - name: Run integration tests
         env:
           MONDOO_API_TOKEN: ${{ secrets.MONDOO_TEST_ORG_TOKEN }}
+          MONDOO_ORG_MRN: //captain.api.mondoo.app/organizations/serene-lovelace-854342
           MONDOO_GQL_ENDPOINT: https://api.edge.mondoo.com/query
         run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.meta.outputs.version }} make test/integration/ci
 
@@ -415,9 +413,6 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
         id: install
 
-      - name: Store creds
-        run: echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
-
       - name: Extract Docker metadata
         id: meta
         uses: docker/metadata-action@v5
@@ -436,6 +431,7 @@ jobs:
       - name: Run integration tests
         env:
           MONDOO_API_TOKEN: ${{ secrets.MONDOO_TEST_ORG_TOKEN }}
+          MONDOO_ORG_MRN: //captain.api.mondoo.app/organizations/serene-lovelace-854342
           MONDOO_GQL_ENDPOINT: https://api.edge.mondoo.com/query
         run: EXTERNAL_INSTALLATION=1 VERSION=${{ steps.meta.outputs.version }} make test/integration/ci
 
