🧹 Complete E2E test suite (#727)
* migrate e2e node scanning tests to base test suite

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* enable console integration for all integration tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* split k8s resources and container images integration tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fix broken upgrade test

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implement CICD cleanup
fix linter errors
fix broken namespace test

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* implement CICD assertions for e2e

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* change admission controller assertions

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* use proper cicd project delete function

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* wait until mondoo service account has been created before starting the tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* ignore cluster asset name comparison to fix k3d tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* wait until container and image scanning pods are terminated after a test

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* wait until node scanning pods are terminated after a test

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* wait after SA has been created before proceeding with the reconcile loop

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* log condition message before checking

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* print all log for test runs

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* add more debugging

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* make sure if audit config condition doesn't exist we keep trying for missing SA test

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* wait for storage provisioner explicitly for minikube

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* wait for other minikube pods to start too

Signed-off-by: Ivan M

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -5,10 +5,6 @@ on:
       cnspecImageTag:
         required: true
         type: string
-      useEdge:
-        required: false
-        type: boolean
-        default: false
     secrets:
       MONDOO_CLIENT:
         required: true
@@ -64,15 +60,7 @@ jobs:
       - name: Print workflow inputs
         run: echo "${{ toJSON(github.event.inputs) }}"
 
-      - name: Store creds (edge)
-        if: ${{ inputs.useEdge == true }}
-        run: |
-          echo ${{ secrets.MONDOO_CLIENT_EDGE }} | base64 -d > creds.json
-
-      - name: Store creds (prod)
-        if: ${{ inputs.useEdge == false }}
-        run: |
-          echo ${{ secrets.MONDOO_CLIENT }} | base64 -d > creds.json
+      - run: sleep 30
 
       # Now that dependencies are cached the tests start almost immediately after minikube has started
       # this makes tests fail occasionally. This sleep gives the runner some time to become more stable
@@ -82,7 +70,9 @@ jobs:
 
       - name: Run integration tests
         env:
-          MONDOO_SERVICE_ACCOUNT_EDGE: ${{ secrets.MONDOO_SERVICE_ACCOUNT_EDGE}}
+          MONDOO_API_TOKEN: ${{ secrets.MONDOO_TEST_ORG_TOKEN }}
+          MONDOO_ORG_MRN: //captain.api.mondoo.app/organizations/serene-lovelace-854342
+          MONDOO_GQL_ENDPOINT: https://api.edge.mondoo.com/query
         run: K8S_DISTRO=${{ matrix.k8s-distro }} make test/integration/ci
 
       - run: mv integration-tests.xml integration-tests-${{ matrix.k8s-distro }}-${{ matrix.k8s-version }}.xml
