--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -26,7 +26,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: [v1.24.16, v1.25.12, v1.26.7, v1.27.4]
+        k8s-version: [v1.26.10, v1.27.7, v1.28.3]
         k8s-distro: [minikube, k3d]
 
     steps:
