--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -274,7 +274,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: [v1.24.16, v1.25.12, v1.26.7, v1.27.4]
+        k8s-version: [v1.26.10, v1.27.7, v1.28.3]
 
     steps:
       - uses: actions/checkout@v4
@@ -385,7 +385,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        k8s-version: [v1.24.16, v1.25.12, v1.26.7, v1.27.4]
+        k8s-version: [v1.26.10, v1.27.7, v1.28.3]
 
     steps:
       - name: Checkout
