Fix security tests
Prevents:
```
local_scanner.go:11:2: package slices is not in GOROOT (/opt/hostedtoolcache/go/1.20.10/x64/src/slices)
note: imported by a module that requires go 1.21
```

Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -27,6 +27,11 @@ jobs:
           persist-credentials: false
       - name: Import environment variables from file
         run: cat ".github/env" >> $GITHUB_ENV
+      - name: Install Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: ">=${{ env.golang-version }}"
+          cache: false
       - name: Scan AWS terraform with Mondoo
         uses: mondoohq/actions/terraform-hcl@main
         env:
