✨ Use cnspec v9 by default
Signed-off-by: Christian Zunker <christian@mondoo.com>

--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -46,6 +46,9 @@ spec:
         image: controller:latest
         imagePullPolicy: IfNotPresent
         name: manager
+        env:
+          - name: FEATURE_ENABLE_V9
+            value: "true"
         securityContext:
           allowPrivilegeEscalation: false
           readOnlyRootFilesystem: true
