🧹 fix cloud tests (#1022)
* fix cloud tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* fix default cnspec tag for cloud tests

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* allow disabling the resource monitor

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* revert timeout increase

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* remove sleep for oom node scan test

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* try more reliable schedule for jobs

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

* remove more sleeps

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

---------

Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/cloud-tests.yaml
+++ b/.github/workflows/cloud-tests.yaml
@@ -8,7 +8,7 @@ on:
       cnspecImageTag:
         required: true
         type: string
-        default: edge-latest-rootless
+        default: latest-rootless
         description: The image tag to use for the cnspec image
       mondooOperatorImageTag:
         required: true
@@ -35,7 +35,7 @@ on:
 
 env:
   MONDOO_OPERATOR_IMAGE_TAG: ${{ github.event.inputs.mondooOperatorImageTag || 'main' }}
-  CNSPEC_IMAGE_TAG: ${{ github.event.inputs.cnspecImageTag || 'edge-latest-rootless' }}
+  CNSPEC_IMAGE_TAG: ${{ github.event.inputs.cnspecImageTag || 'latest-rootless' }}
 
 jobs:
   aks-integration-test:
